--- a/final-jeopardy.html
+++ b/final-jeopardy.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final Jeopardy</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <h1>Final Jeopardy</h1>
+  <!-- container for header -->
+  <div class="container">
+
+    <!-- header -->
+    <div class="header">
+      <h1>- ROUND THREE -</h1>
+
+    </div>
+  </div>
+
+  <!-- Image -->
+  <center>
+    </div class="img3">
+    <img id="imgThree"
+      src=https://ubistatic19-a.akamaihd.net/ubicomstatic/en-CA/global/media/jeopardy_ubicom-screen-03-final_jeopardy-full_size-1280x720_304779.jpg>
+    </div>
+  </center>
+
+  <section id="container-final">
+    <div class=box>
+      <div class="box-one">Category</div>
+    </div>
+
+    <div class=box>
+      <div class="box-two">Amount</div>
+    </div>
+
+    <div class=box>
+      <div class="box-three">Answer</div>
+    </div>
+
+    <div class=box>
+      <div class="box-four">Bet</div>
+    </div>
+
+  </section>
 </body>
+
+<!-- footer container -->
+<footer>
+  <div class="row-nine">Player One: Score:</div>
+  <div class="row-nine">Player Two: Score:</div>
+
+</footer>
+
 </html>
