--- a/HTML/final-jeopardy.html
+++ b/HTML/final-jeopardy.html
@@ -6,35 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final Jeopardy</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/styles/style.css" />
 </head>
 
 <body>
-  <!-- container for header -->
-  <div class="container">
 
-    <!-- header -->
-    <div class="header">
-      <h1>- ROUND THREE -</h1>
-
-    </div>
+  <!-- header -->
+  <div class="title">
+    <h1>- ROUND THREE -</h1>
   </div>
 
   <!-- Image -->
-  <center>
-    </div class="img3">
-    <img id="imgThree"
-      src=https://ubistatic19-a.akamaihd.net/ubicomstatic/en-CA/global/media/jeopardy_ubicom-screen-03-final_jeopardy-full_size-1280x720_304779.jpg>
-    </div>
-  </center>
+  </div class="img">
+  <img id="imgFour"
+    src=https://ubistatic19-a.akamaihd.net/ubicomstatic/en-CA/global/media/jeopardy_ubicom-screen-03-final_jeopardy-full_size-1280x720_304779.jpg>
+  </div>
+
 
   <section id="container-final">
     <div class=box>
-      <div class="box-one">Category</div>
+      <div id="wrapper">
+        <div class="box-one">What shape is the earth?</div>
+      </div>
     </div>
 
     <div class=box>
+      <div id="wrapper"></div>
       <div class="box-two">Amount</div>
+    </div>
     </div>
 
     <div class=box>
@@ -46,13 +45,13 @@
     </div>
 
   </section>
+  <scripts src="index.js"></scripts>
 </body>
 
 <!-- footer container -->
 <footer>
   <div class="row-nine">Player One: Score:</div>
   <div class="row-nine">Player Two: Score:</div>
-
 </footer>
 
 </html>
